<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    android:orientation="vertical"
    tools:context="com.make.char_im.chenfan.activities.settingAcs.FontModeActivity">

    <include layout="@layout/top_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">

        <TextView
            style="@style/TextView.DefaultC5F4"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/rolling_direction" />

        <RadioGroup
            android:id="@+id/radioButton_Direction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_left"
                style="@style/typeface_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/left" />

            <RadioButton
                android:id="@+id/radioButton_up"
                style="@style/typeface_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/up" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_white">

        <TextView

            style="@style/TextView.DefaultC5F4"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/rolling_speed" />

        <RadioGroup
            android:id="@+id/radioButton_speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_fast"
                style="@style/typeface_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/fast" />

            <RadioButton
                android:id="@+id/radioButton_mid"
                style="@style/typeface_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/mid" />

            <RadioButton
                android:id="@+id/radioButton_slow"
                style="@style/typeface_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/slow" />

        </RadioGroup>
    </RelativeLayout>

    <Button
        android:id="@+id/FontMode_button_save"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/default_linearLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_orange_shape"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/color_white" />

</LinearLayout>
