<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/activity_main_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/c1" />


        <RadioGroup
            android:id="@+id/activity_main_rg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:background="@color/c0"
            android:gravity="center"
            android:orientation="horizontal">

            <com.make.char_im.chenfan.views.DiyRadioButton
                android:id="@+id/activity_main_rb_display"
                style="@style/TabRadioButton"
                android:text="@string/point_display"
                app:diy_drawableLeft="@drawable/rb_send_press" />

            <com.make.char_im.chenfan.views.DiyRadioButton
                android:id="@+id/activity_main_rb_setting"
                style="@style/TabRadioButton"
                android:text="@string/setting"
                app:diy_drawableLeft="@drawable/rb_setting_press" />

            <com.make.char_im.chenfan.views.DiyRadioButton
                android:id="@+id/shopping"
                style="@style/TabRadioButton"
                android:text="@string/main_shopping"
                app:diy_drawableLeft="@drawable/rb_shopping_press" />

        </RadioGroup>


    </LinearLayout>


</RelativeLayout>
