<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    android:orientation="vertical">


    <include
        layout="@layout/top_bar"/>

    <TextView
        android:id="@+id/activity_bluetooth_tv_scan"
        style="@style/TextView.Default.MainC6F3"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="@dimen/item_height"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/c0"
        android:layout_marginTop="@dimen/line_view"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Default.MainC6F3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/left_right_margin_default"
            android:text="@string/automatic_connect" />

        <ToggleButton
            android:id="@+id/activity_bluetooth_bt_auto"
            style="@style/View"
            android:layout_width="50dp"
            android:background="@android:color/transparent"
            android:button="@drawable/toggle_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/c0"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Default.MainC6F3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/left_right_margin_default"
            android:text="@string/bluetooth_current_status" />

        <TextView
            android:id="@+id/activity_bluetooth_tv_connect_status"
            style="@style/TextView.SubsidiaryC6F5"
            android:text="@string/bluetooth_none"
            android:textSize="@dimen/f4"
            android:layout_marginRight="10dp"/>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_bluetooth_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/activity_bluetooth_bt_search"
        style="@style/Button.Radius"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_submit"
        android:layout_marginTop="20dp"
        android:text="@string/bluetooth_search"
        android:layout_marginBottom="15dp"/>



</LinearLayout>