<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c1"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginTop="@dimen/line_view"
        android:background="@color/c0"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView.Default.MainC5F3"
            android:layout_marginLeft="@dimen/left_right_margin_default"
            android:text="@string/display_model"
            android:textColor="@color/color_gray" />

        <View
            android:layout_width="@dimen/line_view"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:background="@color/c1"
            android:focusable="true"
            android:focusableInTouchMode="true" />


        <RadioGroup
            android:id="@+id/frag_display_rg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/frag_display_rb_sec"
                style="@style/RadioButton.Display"
                android:text="@string/display_sec" />

            <RadioButton
                style="@style/RadioButton.Display"
                android:text="@string/display_loop" />

            <RadioButton
                style="@style/RadioButton.Display"
                android:text="@string/display_loop" />

            <RadioButton
                style="@style/RadioButton.Display"
                android:text="@string/display_loop" />


        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/display_no_word"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <com.ccy.lnb.en.utils.pullToRefresh.PullAbleRecyclerView
            android:id="@+id/frag_display_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/c1"
            android:gravity="center"
            android:text="Voice's Technical support:Xunfei Technology"
            android:visibility="gone" />

        <include layout="@layout/display_input" />


    </LinearLayout>


</LinearLayout>